--- a/travelfly-homepage/scss/index.scss
+++ b/travelfly-homepage/scss/index.scss
@@ -59,8 +59,8 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-left: 56px;
+    margin-right: 56px;
     .country {
       color: white;
       font-size: 60px;
